Add routes and stud for subscriptions, children and user
